Ensure checkboxes are aligned vertically across browsers

--- a/app/assets/stylesheets/publishing.scss
+++ b/app/assets/stylesheets/publishing.scss
@@ -112,6 +112,7 @@ ul.decided_item li.type_and_title {
 .batch-selection-check-btn {
   input {
     margin: 0;
+    vertical-align: middle;
   }
 }
 
